--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     tools:context="com.droidboys.goodtrips.Fragments.FeedFragment">
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/srl_cm"
+        android:id="@+id/srl_ff"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_cm"
+            android:id="@+id/rv_ff"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
