--- a/app/src/main/res/layout/fragment_instagram_feed.xml
+++ b/app/src/main/res/layout/fragment_instagram_feed.xml
@@ -4,10 +4,15 @@
     android:layout_height="match_parent"
     tools:context="com.droidboys.goodtrips.FragmentsDetail.InstagramFeed">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_fif"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
+
+    <ProgressBar
+        android:id="@+id/prog_bar_fif"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
